<resources>
    <string name="all_photos_were_too_small">Все картинки были слишком маленькими. Попробуйте выбрать картинки побольше.</string>
    <string name="app_name">LuckyBook</string>
    <string name="add_pages_before_exporting">Сначала нужно добавить страницы</string>
    <string name="app_does_not_work_without_permission">Приложение не работает без разрешения!</string>
    <string name="write_permission_rationale">Пожалуйста, разрешите приложению доступ к данным. Без него приложение не работает</string>
    <string name="album_exporting">Экспорт фотокниги…</string>
    <string name="page_exporting">Экспорт страницы %1$d из %2$d</string>
    <string name="album_saved_to">Фотокнига сохранёна в %1$s</string>
    <string name="error_cropping">Error cropping: %1$s</string>
    <string name="image_too_short">Это слишком низкое изображение.Ваше — %1$d пикселей в высоту. Нужно хотябы %2$d пикселей.</string>
    <string name="image_too_narrow">Это слишком узкое изображение. Ваше — %1$d пикселей в ширину. Нужно хотябы %2$d пикселей.</string>
    <string name="choose_other_photo">Выбрать другую фотографию</string>
    <string name="remove_photo_from_album">Убрать эту фотографию из фотокниги</string>
    <string name="done">Готово</string>
    <string name="swap_left">Сдвинуть влево</string>
    <string name="swap_right">Сдвинуть вправо</string>
    <string name="add_page">Добавить страницу</string>
    <string name="remove_page">Удалить</string>
    <string name="add_page_big_button">Добавить страницу</string>
    <string name="export_to_png">Экспорт в PNG</string>
    <string name="preview_album">Просмотр фотокниги</string>
    <string name="create_album">Создать фотокнигу</string>
    <string name="swap_pages">Отразить</string>
    <plurals name="n_photos_were_too_small">
        <item quantity="one">%1$d фотография были слишком маленькой и не попала в фотокнигу</item>
        <item quantity="two">%1$d фотографии были слишком маленькими и не попали в фотокнигу</item>
        <item quantity="few">%1$d фотографии были слишком маленькими и не попали в фотокнигу</item>
        <item quantity="many">%1$d фотографий были слишком маленькими и не попали в фотокнигу</item>
        <item quantity="other">%1$d фотографий были слишком маленькими и не попали в фотокнигу</item>
    </plurals>
    <string name="mis_folder_all">All images</string>
    <string name="mis_preview">Preview</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">Done</string>
    <string name="mis_action_button_string">%1$s (%3$d-%4$d) : %2$d</string>
    <string name="mis_photo_unit">%1$d photos</string>
    <string name="mis_tip_take_photo">Take photo</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>
    <string name="mis_permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="multi_image_selector_fragment__short_image">Качество фото не для печати</string>
    <string name="promo">Промокод</string>
    <string name="enter_promo_help">Если у вас есть промокод, пожалуйста, введите его здесь</string>
    <string name="delivery_way">Способ доставки</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="city_label">ГОРОД</string>
    <string name="street_label">УЛИЦА</string>
    <string name="house_label">Номер дома</string>
    <string name="flat_label">КВАРТИРА</string>
    <string name="zip_label">ИНДЕКС</string>
    <string name="contact_info">Контактная информация</string>
    <string name="name">ИМЯ</string>
    <string name="surname">ФАМИЛИЯ</string>
    <string name="email_label">E-MAIL</string>
    <string name="phone_label">ТЕЛЕФОН</string>
    <string name="total">Итого</string>
    <string name="total_label">ИТОГО К ОПЛАТЕ:</string>
    <string name="total_cost_sample">Уже оплачено</string>
    <string name="total_cost">%1d ₽</string>
    <string name="total_cost_free">Бесплатно</string>
    <string name="cost_detail_sample">Введи промокод и получи свою книжку бесплатно</string>
    <string name="cost_detail_formatted">(%1$d ₽ фотокнига + %2$s ₽ доставка)</string>
    <string name="cost_detail_with_promocode_srsr_delivery_formatted"> Фотокнига бесплатно. %1$s ₽ доставка</string>
    <string name="cost_detail_with_promocode_russia_post_delivery_formatted"> Фотокнига бесплатно. Доставка бесплатно</string>
    <string name="cost_detail_free_delivery_formatted">(%d Р фотокнига. Доставка бесплатно)</string>
    <string name="cost_detail">(%1$f Р фотокнига + %2$f Р доставка)</string>
    <string name="promo_code">ВВЕСТИ ПРОМОКОД</string>
    <string name="pay_by_card">ОПЛАТА КАРТОЙ</string>
    <string name="payment_and_delivery">Оплата и доставка</string>
    <string name="russia_post"><Data><![CDATA[<b>Почта России <br/> Бесплатно</b><br/> (до 14 дней)]]></Data></string>
    <string name="spsr_post"><Data><![CDATA[<b>СПСР Экспресс<br/> 300 ₽</b><br/> (до 7 дней)]]></Data></string>
    <string name="spsr_post_formatted"><Data><![CDATA[<b>СПСР Экспресс<br/> %1$s ₽</b><br/> (%2$s дней)]]></Data></string>
    <string name="splash_text">Создай фотокнигу для\nсвоего малыша</string>
    <string name="photos">Фото</string>
    <string name="images_cropped">изображения созданы</string>
    <string name="set_title_dialog_title">Название фотокниги</string>
    <string name="sum">СУММА</string>
    <string name="sum_sample">0 ₽</string>
    <string name="album_cost_total">%d ₽</string>
    <string name="make_order">Заказать фотокнигу</string>
    <string name="share">Поделиться с друзьями</string>
    <string name="connection_failed_gdrive">Не удалось загрузить файл на диск</string>
    <string name="read_contacts_permission_desc">Вы не сможете поделиться с друзьями книгой, если не дадите разрешение</string>
    <string name="give_access_read_contacts">Поделиться</string>
    <string name="share_error">Что-то пошло не так</string>
    <string name="share_message">Посмотрите мою фотокнигу, которую я создал с помощью приложения LuckyBook %1$s</string>
    <string name="preview_screen">Предпросмотр</string>
    <string name="progress_title">Загрузка</string>
    <string name="progress_content">Пожалуйста, подождите</string>
    <string name="file_not_found">Данного файла не существует</string>
    <string name="creating_sharing_album">Создаем фотокнигу для друзей</string>
    <string name="pdf_with_name_created">pdf создан:</string>
    <string name="cost_error">Неверный формат суммы заказа</string>
    <string name="choose_photobook">Выберите фотокнигу</string>
    <string name="choose_cover">Выберите обложку</string>
    <string name="choose_album">Фотокниги</string>
    <string name="spsr_base_url">https://api.spsr.ru</string>
    <string name="spsr_base_url2">http://www.cpcr.ru/</string>
    <string name="default_country">россия</string>
    <string name="patronymic_label">ОТЧЕСТВО</string>
    <string name="promo_code_fragment_title">Введите промокод</string>
    <string name="promo_code_fragment_submit">Подтвердить</string>
    <string name="promo_code_fragment_cancel">Отмена</string>
    <string name="service_base_url">https://staging-luckybook.herokuapp.com/</string>
    <string name="deliver">Заказать</string>
    <string name="next">Готово</string>
    <string name="filters">Фильтры</string>
    <string name="spsr_icn">1620082621</string>
    <string name="default_city_source">набережные челны</string>
    <string name="cost_calculation_error">Произошла ошибка при рассчете стоимости доставки</string>
    <string name="city_field_empty_error">Поле \"Город\" не может быть пустым</string>
    <string name="zebra_online">Зебра-онлайн</string>
    <string name="spsr_cost_calculating_progress">Идет рассчет стоимости доставки...</string>
    <string name="dialog_error_title">Ошибка</string>
    <string name="dialog_ok_button">ОК</string>
    <string name="city_not_found_error">В указанный город доставка не осуществляется. Пожалуйста, выберите другой город, либо выберите другой способ доставки</string>
    <string name="cost_free">Бесплатно</string>
    <string name="covers_dmb">Дембель</string>
    <string name="covers_other">Разное</string>
    <string name="covers_school">Выпускной</string>
    <string name="covers_travel">Путешествия</string>
    <string name="covers_wedding">Свадьба</string>
    <string name="default_street_source">Московский пр-кт</string>
    <string name="default_house_source">104а</string>
    <string name="default_shipper_name">Ивлев Евгений Юрьевич</string>
    <string name="fields_not_filled_error">Необходимо заполнить все поля</string>
    <string name="page_nums">%1$d - %2$d</string>
    <string name="birthday_label">ДАТА РОЖДЕНИЯ</string>
    <string name="enter_album_title">Введите название фотокниги</string>
    <string name="loading">Загрузка</string>
    <string name="cost_info_dialog_title">Информация</string>
    <string name="progress_album_creating">Формируем фотокнигу %1$s %%</string>
    <string name="cost_info_dialog_content">Стоимость фотокниги составляется из:\nСтоимость обложки (%1$d руб.)\nСтоимость разворота (%2$d руб.)\n%3$d разворотов = %4$d руб.\nИтого: %5$d руб.\nЕсли у Вас возникли какие-либо вопросы или предложения, вы можете отправить их на нашу почту</string>
    <string name="uploading_to_cloud">Заливаем в облако %1$s %%</string>
    <string name="success">Готово</string>
    <string name="success_content">Ваша фотокнига успешно загружена и вскоре будет отправлен Вам</string>
    <string name="pdf_generation_error">Не удалось создать файл фотокниги</string>
    <string name="request_fail">Во время обработки запроса произошла ошибка</string>
    <string name="parse_date_error">Неверный формат даты</string>
    <string name="positive_text">ДА</string>
    <string name="negative_text">НЕТ</string>
    <string name="delete_album_title">Удаление фотокниги</string>
    <string name="delete_album_content">Вы уверены, что хотите удалить фотокнигу %1$s?</string>
    <string name="attention">Внимание!</string>
    <string name="need_to_cancel_background_task_before">Чтобы продолжить необходимо остановить другие операции. Остановить их?</string>
    <string name="stop">Остановить</string>
    <string name="my_albums">Мои фотокниги</string>
    <string name="order_ready_title">Поздравляем!\nВаша книга отправлена!</string>
    <string name="new_album">Новая фотокнига</string>
    <string name="to_album_list">Мои фотокниги</string>
    <string name="delete">Удалить</string>
    <string name="feedback_info"><Data><![CDATA[Если у вас возникли какие-либо вопросы или предложения, вы можете отправить их на почту: <u><font color="blue">lucky.book@yandex.ru</font></u>]]></Data></string>
    <string name="crop">Обрезать</string>
    <string name="search_by_code">Промокод</string>
    <string name="info">Справка</string>
    <string name="swapping_pages">Переставить</string>
    <string name="text_info_1">Продолжить?</string>
    <string name="text_info_0">Редактирование фотокниги будет не доступно до окончания заказа;

В процессе оформления Вам будет предложено оплатить фотокнигу с помощью сервиса электронных платежей  - Яндекс.Деньги. Оплата  принимается банковскими картами (VISA, MasterCard, Maestro). Комиссия 0%. Обработка платежей осуществляется сервисом  Яндекс.Деньги;

Доставка — КурьерСервис и Почта России;</string>
    <string name="text_about_payment_and_delivery">Подробнее об оплате и доставке</string>
</resources>