<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_title_dialog_title"
        android:layout_margin="@dimen/twice_view_margin"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/primaryTextColor"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="@dimen/twice_view_margin"
            android:id="@+id/btnNegative"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mis_permission_dialog_cancel"
            android:textColor="@color/primaryTextColor"/>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="@dimen/twice_view_margin"
            android:id="@+id/btnPositive"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mis_permission_dialog_ok"
            android:textColor="@color/primaryTextColor"/>

    </LinearLayout>

</LinearLayout>