<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_bar" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/twice_view_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/album_preview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/cover_preview_bkg"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_label_margin"
                android:text="@string/sum"
                android:textColor="@color/cost"
                android:textStyle="bold"
                android:textSize="@dimen/default_big_text_size"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/delete"
                        android:layout_width="@dimen/small_btn_size"
                        android:layout_height="@dimen/small_btn_size"
                        android:background="@drawable/delete_album_background"
                        android:src="@drawable/ic_delete_white_24dp"
                        android:scaleType="centerInside"
                        android:padding="@dimen/half_view_margin"
                        android:layout_gravity="center"/>

                    <!--<ImageView
                        android:id="@+id/delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/delete_album_background"
                        android:src="@drawable/ic_delete_white_24dp"
                        android:layout_gravity="center"/>-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/sum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sum_sample"
                        android:textColor="@color/cost"
                        android:textSize="@dimen/double_label_text_size"
                        android:textStyle="bold"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/small_btn_size"
                    android:layout_weight="1"
                    android:src="@drawable/ic_info_outline_black_24dp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <com.xiaochen.progressroundbutton.AnimDownloadProgressButton
                android:id="@+id/make_order"
                app:progressbtn_text="@string/make_order"
                android:layout_gravity="center"
                style="@style/AppTheme.AnimDownloadProgressButton"
                android:layout_marginTop="@dimen/text_label_margin"/>

            <com.xiaochen.progressroundbutton.AnimDownloadProgressButton
                android:id="@+id/share"
                app:progressbtn_text="@string/share"
                app:progressbtn_progress_template="@string/progress_album_creating"
                android:layout_gravity="center"
                style="@style/AppTheme.AnimDownloadProgressButton"
                android:layout_marginBottom="@dimen/text_label_margin"
                android:layout_marginTop="@dimen/text_label_margin"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
