<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar_style" />


    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/rootLayout"
            android:layout_width="0px"
            android:layout_height="0px"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            app:layout_aspectRatio="200%"
            app:layout_widthPercent="90%">

            <FrameLayout
                android:id="@+id/left_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:foreground="@drawable/selected_page"
                app:layout_widthPercent="50%" />

            <FrameLayout
                android:id="@+id/right_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:foreground="@drawable/selected_page"
                app:layout_widthPercent="50%" />

            <ImageView
                android:id="@+id/page_divider_mid"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:src="@drawable/page_divider" />

        </android.support.percent.PercentRelativeLayout>

    </android.support.percent.PercentRelativeLayout>


    <LinearLayout
        android:id="@+id/actions_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b9b8b8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/twice_view_margin">

            <TextView
                android:id="@+id/swap_pages_button"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="-5dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/half_view_margin"
                android:drawableTop="@drawable/image_swap"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:padding="@dimen/half_view_margin"
                android:text="@string/swapping_pages"
                android:textColor="@color/actions_color" />

            <TextView
                android:id="@+id/crop"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="-35dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/half_view_margin"
                android:drawableTop="@drawable/image_edit"
                android:enabled="false"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:padding="@dimen/half_view_margin"
                android:text="@string/crop"
                android:textColor="@color/actions_color" />

            <TextView
                android:id="@+id/add_page_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="-35dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/half_view_margin"
                android:drawableTop="@drawable/image_add"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:padding="@dimen/half_view_margin"
                android:text="@string/add_page"
                android:textColor="@color/actions_color" />

            <TextView
                android:id="@+id/delete"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="-35dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/half_view_margin"
                android:drawableTop="@drawable/image_delete"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:padding="@dimen/half_view_margin"
                android:text="@string/delete"
                android:textColor="@color/actions_color" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bottom_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_recycler_height"
        android:background="@color/spreads_background"
        android:gravity="center_vertical"
        android:orientation="horizontal" />
</LinearLayout>